--- a/ProyectoFinal_Hotel/src/Interfaces_Vistas/datosHuesped.form
+++ b/ProyectoFinal_Hotel/src/Interfaces_Vistas/datosHuesped.form
@@ -42,10 +42,10 @@
                                       <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Group type="103" alignment="0" groupAlignment="1" attributes="0">
-                                              <Component id="jTcelular" min="-2" pref="188" max="-2" attributes="0"/>
+                                              <Component id="jTcorreo" min="-2" pref="188" max="-2" attributes="0"/>
                                               <Group type="103" groupAlignment="1" max="-2" attributes="0">
                                                   <Component id="jTdomicilio" alignment="0" pref="188" max="32767" attributes="0"/>
-                                                  <Component id="jTcorreo" max="32767" attributes="0"/>
+                                                  <Component id="jTcelular" max="32767" attributes="0"/>
                                               </Group>
                                               <Component id="jTapellido" alignment="1" min="-2" pref="188" max="-2" attributes="0"/>
                                               <Component id="jTnombre" alignment="1" min="-2" pref="188" max="-2" attributes="0"/>
@@ -125,12 +125,12 @@
                                           <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jTcorreo" min="-2" max="-2" attributes="0"/>
+                                      <Component id="jTcelular" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="jTcelular" min="-2" max="-2" attributes="0"/>
+                              <Component id="jTcorreo" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                       </Group>
@@ -219,12 +219,12 @@
     </Component>
     <Component class="javax.swing.JTextField" name="jTdomicilio">
     </Component>
-    <Component class="javax.swing.JTextField" name="jTcorreo">
-    </Component>
     <Component class="javax.swing.JTextField" name="jTcelular">
       <Events>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTcelularKeyTyped"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JTextField" name="jTcorreo">
     </Component>
     <Component class="javax.swing.JButton" name="jBbuscar">
       <Properties>
