--- a/ProyectoFinal_Hotel/src/proyectofinal_hotel/InterfazPrincipal.form
+++ b/ProyectoFinal_Hotel/src/proyectofinal_hotel/InterfazPrincipal.form
@@ -12,11 +12,17 @@
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="jMenu1">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="2" name="C:\Users\User_Y\Downloads\turista.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Hu&#xe9;sped"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMdatosHuesped">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\User_Y\Downloads\formulario-de-consentimiento-del-donante.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Datos Hu&#xe9;sped"/>
               </Properties>
               <Events>
@@ -27,11 +33,17 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu2">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="2" name="C:\Users\User_Y\Downloads\hotel.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Habitaciones/Categoria"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMdatosHabitacion">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\User_Y\Downloads\reserva-en-linea.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Datos Habitaci&#xf3;n"/>
               </Properties>
               <Events>
@@ -40,6 +52,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMdatosCategoria">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\User_Y\Downloads\reserva.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Datos Categor&#xed;a"/>
               </Properties>
               <Events>
@@ -50,11 +65,17 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu3">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="2" name="C:\Users\User_Y\Downloads\registrarse.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Administraci&#xf3;n"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMformularioReserva">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\User_Y\Downloads\reservado.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Formulario de Reserva"/>
               </Properties>
               <Events>
@@ -65,11 +86,17 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu4">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="2" name="C:\Users\User_Y\Downloads\campana.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Consultas"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMHuespedxHabitacion">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\User_Y\Downloads\llave-de-la-habitacion.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Huespedes por Habitacion"/>
               </Properties>
               <Events>
@@ -78,6 +105,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\User_Y\Downloads\registro-en-linea.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Registro de Inscripcion"/>
               </Properties>
               <Events>
@@ -88,11 +118,17 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu5">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="2" name="C:\Users\User_Y\Downloads\salida.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Salir"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMsalir">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\User_Y\Downloads\boton.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Cerrar Programa"/>
               </Properties>
               <Events>
@@ -147,7 +183,7 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="592" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="584" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
