--- a/ProyectoFinal_Hotel/src/proyectofinal_hotel/InterfazPrincipal.form
+++ b/ProyectoFinal_Hotel/src/proyectofinal_hotel/InterfazPrincipal.form
@@ -13,7 +13,7 @@
         <Menu class="javax.swing.JMenu" name="jMenu1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\User_Y\Downloads\turista.png"/>
+              <Image iconType="3" name="/iconos_imagenes/turista.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Hu&#xe9;sped"/>
           </Properties>
@@ -21,7 +21,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMdatosHuesped">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\User_Y\Downloads\formulario-de-consentimiento-del-donante.png"/>
+                  <Image iconType="3" name="/iconos_imagenes/formulario-de-consentimiento-del-donante.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Datos Hu&#xe9;sped"/>
               </Properties>
@@ -34,7 +34,7 @@
         <Menu class="javax.swing.JMenu" name="jMenu2">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\User_Y\Downloads\hotel.png"/>
+              <Image iconType="3" name="/iconos_imagenes/hotel.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Habitaciones/Categoria"/>
           </Properties>
@@ -42,7 +42,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMdatosHabitacion">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\User_Y\Downloads\reserva-en-linea.png"/>
+                  <Image iconType="3" name="/iconos_imagenes/reserva-en-linea.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Datos Habitaci&#xf3;n"/>
               </Properties>
@@ -53,7 +53,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMdatosCategoria">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\User_Y\Downloads\reserva.png"/>
+                  <Image iconType="3" name="/iconos_imagenes/reserva.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Datos Categor&#xed;a"/>
               </Properties>
@@ -66,7 +66,7 @@
         <Menu class="javax.swing.JMenu" name="jMenu3">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\User_Y\Downloads\registrarse.png"/>
+              <Image iconType="3" name="/iconos_imagenes/registrarse.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Administraci&#xf3;n"/>
           </Properties>
@@ -74,7 +74,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMformularioReserva">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\User_Y\Downloads\reservado.png"/>
+                  <Image iconType="3" name="/iconos_imagenes/reservado.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Formulario de Reserva"/>
               </Properties>
@@ -87,7 +87,7 @@
         <Menu class="javax.swing.JMenu" name="jMenu4">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\User_Y\Downloads\campana.png"/>
+              <Image iconType="3" name="/iconos_imagenes/campana.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Consultas"/>
           </Properties>
@@ -95,7 +95,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMHuespedxHabitacion">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\User_Y\Downloads\llave-de-la-habitacion.png"/>
+                  <Image iconType="3" name="/iconos_imagenes/llave-de-la-habitacion.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Huespedes por Habitacion"/>
               </Properties>
@@ -106,7 +106,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\User_Y\Downloads\registro-en-linea.png"/>
+                  <Image iconType="3" name="/iconos_imagenes/registro-en-linea.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Registro de Inscripcion"/>
               </Properties>
@@ -119,7 +119,7 @@
         <Menu class="javax.swing.JMenu" name="jMenu5">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\User_Y\Downloads\salida.png"/>
+              <Image iconType="3" name="/iconos_imagenes/salida.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Salir"/>
           </Properties>
@@ -127,7 +127,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMsalir">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\User_Y\Downloads\boton.png"/>
+                  <Image iconType="3" name="/iconos_imagenes/boton.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Cerrar Programa"/>
               </Properties>
